--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -116,8 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "borrar_todo()\n",
     "ir_a_casa()\n",
+    "borrar_todo()\n",
     "\n",
     "adelante(100)\n",
     "derecha(90)\n",
@@ -126,6 +126,27 @@
     "adelante(100)\n",
     "derecha(90)\n",
     "adelante(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si quieres ir haciendolo paso a paso debes escibir una instruccion en la celda y luego ejecutar con el icono ▶️ luego borrar todo lo que has escrito, escribir una nueva instruccion y volver a ejecutar, prueba con la siguiente celda: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Escribe tu instruccion\n",
+    "# 2. Ejecuta\n",
+    "# 3. Borra la instruccion\n",
+    "# 4. Repite los pasos\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -157,9 +178,9 @@
     "<summary>Click aqui para ver la Solucion del Ejercicio 1</summary>\n",
     "<code>\n",
     "\n",
-    "borrar_todo()\n",
-    "\n",
     "ir_a_casa()\n",
+    "    \n",
+    "borrar_todo()\n",
     "    \n",
     "adelante(200)\n",
     "\n",
@@ -205,8 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "borrar_todo()\n",
     "ir_a_casa()\n",
+    "borrar_todo()\n",
     "\n",
     "color('yellow')\n",
     "adelante(100)\n"
@@ -241,9 +262,9 @@
     "<summary>Click aqui para ver la Solucion del Ejercicio 2</summary>\n",
     "<code>\n",
     "\n",
-    "borrar_todo()\n",
-    "\n",
     "ir_a_casa()\n",
+    "    \n",
+    "borrar_todo()\n",
     "\n",
     "color('green')\n",
     "\n",
@@ -266,6 +287,83 @@
     "color('orange')\n",
     "\n",
     "adelante(100)\n",
+    "\n",
+    "</code>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3: \n",
+    "\n",
+    "Dibuja un cubo con sus lados de 100 metros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribe a continuacion tus instrucciones\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Click aqui para ver la Solucion del Ejercicio 3</summary>\n",
+    "Esta es solo una de muchas soluciones posibles. \n",
+    "Cualquier solucion que dibuje un cubo esta bien.\n",
+    "<code>\n",
+    "\n",
+    "ir_a_casa()\n",
+    "    \n",
+    "borrar_todo()\n",
+    "\n",
+    "adelante(100)\n",
+    "    \n",
+    "derecha(90)\n",
+    "    \n",
+    "adelante(100)\n",
+    "    \n",
+    "derecha(90)\n",
+    "    \n",
+    "adelante(100)\n",
+    "    \n",
+    "derecha(90)\n",
+    "    \n",
+    "adelante(100)\n",
+    "    \n",
+    "derecha(45)\n",
+    "    \n",
+    "adelante(50)\n",
+    "    \n",
+    "derecha(45)\n",
+    "    \n",
+    "adelante(100)\n",
+    "    \n",
+    "derecha(90)\n",
+    "    \n",
+    "adelante(100)\n",
+    "    \n",
+    "derecha(45)\n",
+    "    \n",
+    "adelante(50)\n",
+    "    \n",
+    "derecha(135)\n",
+    "    \n",
+    "adelante(100)\n",
+    "    \n",
+    "derecha(45)\n",
+    "    \n",
+    "adelante(50)\n",
     "\n",
     "</code>\n",
     "</details>"
