--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -132,7 +132,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si quieres ir haciendolo paso a paso debes escibir una instruccion en la celda y luego ejecutar con el icono ▶️ luego borrar todo lo que has escrito, escribir una nueva instruccion y volver a ejecutar, prueba con la siguiente celda: "
+    "Si quieres ir haciendolo paso a paso debes:\n",
+    "1. Escibir una instruccion en la celda.\n",
+    "2. Ejecutar con el icono ▶️ \n",
+    "3. Borrar la instruccion que has escrito.\n",
+    "4. Escribir una nueva instruccion y volver a ejecutar. \n",
+    "\n",
+    "Prueba con la siguiente celda (recuerda primero ir_a_casa y borrar_todo): "
    ]
   },
   {
