--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primero que nada presionamos el icono ▶️ para ejecutar (se encuentra a la izquierda de cada celda que contiene nuestro codigo de programacion, aparece cuando posicionamos el mouse encima de el)\n",
+    "Primero que nada presionamos el icono ▶️ para ejecutar (se encuentra a la izquierda de cada celda que contiene nuestro codigo de programacion, aparece cuando posicionamos el raton o mouse encima de el)\n",
     "\n",
     "Ejecutar la siguiente celda para despertar a la tortuga y poder empezar a darle instrucciones (ten en cuenta que despertar a la tortuga puede tomar un par de minutos, ten paciencia):"
    ]
@@ -43,7 +43,7 @@
     "\n",
     "En este curso nuestro trabajo sera darle instrucciones a una tortuga para que haga los dibujos que nosotros querramos.\n",
     "\n",
-    "Utilizaremos la palabra `adelante` para que la tortuga vaya hacia adelante y entre parentesis pondremos cuantos metros queremos que vaya hacia adelante, por ejemplo: `adelante(10)`"
+    "Utilizaremos la palabra `adelante` para que la tortuga vaya hacia adelante y entre parentesis pondremos cuantos centimetros queremos que vaya hacia adelante, por ejemplo: `adelante(100)`"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 metros de lado. Empecemos con borrar_todo e ir_a_casa para empezar de cero."
+    "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 centimetros de lado. Empecemos con borrar_todo e ir_a_casa para empezar de cero."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "source": [
     "### Ejercicio 1: \n",
     "\n",
-    "Dibuja un cuadrado con sus lados de 200 metros"
+    "Dibuja un cuadrado con sus lados de 200 centimetros"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "### Ejercicio 2: \n",
     "\n",
-    "Dibuja un cuadrado con sus lados de 100 metros y de cuatro colores diferentes: verde, azul, rojo y naranja"
+    "Dibuja un cuadrado con sus lados de 100 centimetros y de cuatro colores diferentes: verde, azul, rojo y naranja"
    ]
   },
   {
@@ -304,7 +304,7 @@
    "source": [
     "### Ejercicio 3: \n",
     "\n",
-    "Dibuja un cubo con sus lados de 100 metros"
+    "Dibuja un cubo con sus lados de 100 centimetros"
    ]
   },
   {
