--- a/cursos/espanol/programacion_basico/1_patrones_repetidos.ipynb
+++ b/cursos/espanol/programacion_basico/1_patrones_repetidos.ipynb
@@ -4,12 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# El ordenador es muy tonto\n",
+    "# Encontrando patrones que se repiten\n",
     "\n",
-    "Programar es decirle al ordenador que queremos que haga.\n",
     "\n",
-    "Hay que entender que el ordenador es muy tonto por lo que entiende solamente unas pocas palabras que llamamos intrucciones y utilizando esas pocas palabras vamos a decirle exactamente que debe hacer\n",
-    "\n"
+    "- https://www.pythonclassroom.com/\n"
    ]
   },
   {
@@ -245,7 +243,7 @@
    "source": [
     "### Ejercicio 2: \n",
     "\n",
-    "Dibuja un cuadrado con sus lados de 100 metros y de cuatro colores diferentes: verde, azul, rojo y naranja"
+    "Dibuja un cuadrado con sus lados de 100 centimetros y de cuatro colores diferentes: verde, azul, rojo y naranja"
    ]
   },
   {
@@ -299,203 +297,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 3:\n",
-    "\n",
-    "Dibujar un espiral como el que se ve a continuacion. Ayuda empezar con lados de 10 centimetros e ir aumentando de 10 en 10 hasta llegar a lados de 100 centimetros."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "\n",
-    "velocidad(6)\n",
-    "color(\"white\")\n",
-    "\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>Click aqui para ver la Solucion del Ejercicio 3</summary>\n",
-    "<code>\n",
-    "\n",
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "\n",
-    "velocidad(6)\n",
-    "color(\"white\")\n",
-    "\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "\n",
-    "</code>\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Asi como tenemos las instrucciones `adelante` y `derecha` tambien tenemos las instrucciones `atras` e `izquierda`.\n",
-    "\n",
-    "Utilizaremos la palabra `atras` para que la tortuga vaya hacia atras y entre parentesis pondremos cuantos centimetros queremos que vaya hacia atras, por ejemplo: `atras(100)`\n",
-    "\n",
-    "Utilizaremos la palabra `izquierda` para que la tortuga doble hacia la izquierda y entre parentesis pondremos el angulo que queremos que gire, por ejemplo: `izquierda(90)`\n",
-    "\n",
-    "Veamos que pasa si hacemos el cuadrado utilizando atras e izquierda:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Veamos como dibujar un zigzag utilizando la palabra izquierda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "\n",
-    "velocidad(6)\n",
-    "color(\"white\")\n",
-    "\n",
-    "derecha(45)\n",
-    "adelante(30)\n",
-    "izquierda(45)\n",
-    "adelante(30)\n",
-    "derecha(45)\n",
-    "adelante(30)\n",
-    "izquierda(45)\n",
-    "adelante(30)\n",
-    "derecha(45)\n",
-    "adelante(30)\n",
-    "izquierda(45)\n",
-    "adelante(30)\n",
-    "derecha(45)\n",
-    "adelante(30)\n",
-    "izquierda(45)\n",
-    "adelante(30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 4:\n",
-    "\n",
-    "Dibujar una escalera que vaya hacia la izquierda y hacia arriba"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -508,9 +314,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 5: \n",
+    "### Ejercicio 3: \n",
     "\n",
-    "Dibuja un cubo con sus lados de 100 metros"
+    "Dibuja un cubo con sus lados de 100 centimetros"
    ]
   },
   {
