--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "UV1MnJvtQdW3"
+   },
    "source": [
     "# El ordenador es muy tonto\n",
     "\n",
@@ -14,7 +16,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Ue6Tx0DKQdW4"
+   },
    "source": [
     "Primero que nada presionamos el icono ▶️ para ejecutar (se encuentra a la izquierda de cada celda que contiene nuestro codigo de programacion, aparece cuando posicionamos el raton o mouse encima de el)\n",
     "\n",
@@ -24,10 +28,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "8gdMqppiQdW4"
+   },
    "outputs": [],
    "source": [
-    "# NO HACE FALTA ENTENDER ESTE CODIGO. \n",
+    "# NO HACE FALTA ENTENDER ESTE CODIGO.\n",
     "# SOLO EJECUTARLO PARA EMPEZAR\n",
     "# PUEDE TARDAR UN PAR DE MINUTOS\n",
     "!pip install SeTeEscapoLaTortuga -U -q\n",
@@ -37,7 +43,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "GdcYoENiQdW4"
+   },
    "source": [
     "## Comencemos a darle instrucciones\n",
     "\n",
@@ -49,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "WtkvOD7QQdW5"
+   },
    "outputs": [],
    "source": [
     "adelante(100)"
@@ -57,7 +67,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ACczhEc3QdW5"
+   },
    "source": [
     "Utilizaremos la palabra `derecha` para que la tortuga doble hacia la derecha y entre parentesis pondremos el angulo que queremos que gire, por ejemplo: `derecha(90)`"
    ]
@@ -65,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "2S3CvPJTQdW5"
+   },
    "outputs": [],
    "source": [
     "derecha(90)"
@@ -73,7 +87,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "D8bPVwpBQdW5"
+   },
    "source": [
     "Utilizaremos la palabra `ir_a_casa()` para que la tortuga vuelva a su posicion inicial"
    ]
@@ -81,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "u9lK9E50QdW5"
+   },
    "outputs": [],
    "source": [
     "ir_a_casa()"
@@ -89,7 +107,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "-Jj4DTdEQdW5"
+   },
    "source": [
     "Utilizaremos la palabra `borrar_todo()` para se borre todo lo que la tortuga ha dibujado"
    ]
@@ -97,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "lXipcQ0eQdW6"
+   },
    "outputs": [],
    "source": [
     "borrar_todo()"
@@ -105,7 +127,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ojqV4CccQdW6"
+   },
    "source": [
     "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 centimetros de lado. Empecemos con borrar_todo e ir_a_casa para empezar de cero."
    ]
@@ -113,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "1lzafRT9QdW6"
+   },
    "outputs": [],
    "source": [
     "ir_a_casa()\n",
@@ -130,21 +156,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5KLlXskwQdW6"
+   },
    "source": [
     "Si quieres ir haciendolo paso a paso debes:\n",
     "1. Escibir una instruccion en la celda.\n",
-    "2. Ejecutar con el icono ▶️ \n",
+    "2. Ejecutar con el icono ▶️\n",
     "3. Borrar la instruccion que has escrito.\n",
-    "4. Escribir una nueva instruccion y volver a ejecutar. \n",
+    "4. Escribir una nueva instruccion y volver a ejecutar.\n",
     "\n",
-    "Prueba con la siguiente celda (recuerda primero ir_a_casa y borrar_todo): "
+    "Prueba con la siguiente celda (recuerda primero ir_a_casa y borrar_todo):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "id": "1HSAqKfBQdW6"
+   },
    "outputs": [],
    "source": [
     "# 1. Escribe tu instruccion\n",
@@ -157,9 +187,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "S4kCqMygQdW6"
+   },
    "source": [
-    "### Ejercicio 1: \n",
+    "### Ejercicio 1:\n",
     "\n",
     "Dibuja un cuadrado con sus lados de 200 centimetros"
    ]
@@ -167,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "oTgqiQw6QdW6"
+   },
    "outputs": [],
    "source": [
     "# Escribe a continuacion tus instrucciones\n",
@@ -178,29 +212,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "HnLZPC-iQdW6"
+   },
    "source": [
     "<details>\n",
     "<summary>Click aqui para ver la Solucion del Ejercicio 1</summary>\n",
     "<code>\n",
     "\n",
-    "ir_a_casa()\n",
-    "    \n",
-    "borrar_todo()\n",
-    "    \n",
-    "adelante(200)\n",
-    "\n",
-    "derecha(90)\n",
-    "\n",
-    "adelante(200)\n",
-    "\n",
-    "derecha(90)\n",
-    "\n",
-    "adelante(200)\n",
-    "\n",
-    "derecha(90)\n",
-    "\n",
-    "adelante(200)\n",
+    "ir_a_casa()<br>\n",
+    "borrar_todo()<br>\n",
+    "<br>\n",
+    "adelante(200)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(200)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(200)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(200)<br>\n",
     "\n",
     "</code>\n",
     "</details>"
@@ -208,7 +237,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "7F-bPu5OQdW6"
+   },
    "source": [
     "Utilicemos ahora la palabra `color` para cambiar el color con el que la tortuga dibuja y entre parentesis pondremos el color que queremos que gire, por ejemplo: `color('yellow')`. Como vemos en el ejemplo el color debe estar en ingles y entre comillas.\n",
     "\n",
@@ -229,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "V-AFW6rlQdW6"
+   },
    "outputs": [],
    "source": [
     "ir_a_casa()\n",
@@ -241,9 +274,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "bnxTkEFzQdW6"
+   },
    "source": [
-    "### Ejercicio 2: \n",
+    "### Ejercicio 2:\n",
     "\n",
     "Dibuja un cuadrado con sus lados de 100 metros y de cuatro colores diferentes: verde, azul, rojo y naranja"
    ]
@@ -251,7 +286,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "WHYWaKLaQdW6"
+   },
    "outputs": [],
    "source": [
     "# Escribe a continuacion tus instrucciones\n",
@@ -262,37 +299,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "cKBdrgSmQdW6"
+   },
    "source": [
     "<details>\n",
     "<summary>Click aqui para ver la Solucion del Ejercicio 2</summary>\n",
     "<code>\n",
     "\n",
-    "ir_a_casa()\n",
-    "    \n",
-    "borrar_todo()\n",
-    "\n",
-    "color('green')\n",
-    "\n",
-    "adelante(100)\n",
-    "\n",
-    "derecha(90)\n",
-    "\n",
-    "color('blue')\n",
-    "\n",
-    "adelante(100)\n",
-    "\n",
-    "derecha(90)\n",
-    "\n",
-    "color('red')\n",
-    "\n",
-    "adelante(100)\n",
-    "\n",
-    "derecha(90)\n",
-    "\n",
-    "color('orange')\n",
-    "\n",
-    "adelante(100)\n",
+    "ir_a_casa()<br>\n",
+    "borrar_todo()<br>\n",
+    "<br>\n",
+    "color('green')<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "color('blue')<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "color('red')<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "color('orange')<br>\n",
+    "adelante(100)<br>\n",
     "\n",
     "</code>\n",
     "</details>"
@@ -300,7 +328,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Y86YjrD8QdW6"
+   },
    "source": [
     "### Ejercicio 3:\n",
     "\n",
@@ -310,111 +340,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 521
+    },
+    "id": "ng_m_rxuQdW7",
+    "outputId": "7a59ca6e-e798-4eb6-b2a6-dd20eef81c44",
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
+    "# Escribe a continuacion tus instrucciones\n",
     "\n",
-    "velocidad(6)\n",
-    "color(\"white\")\n",
     "\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "YZ91iykeQdW7"
+   },
    "source": [
     "<details>\n",
     "<summary>Click aqui para ver la Solucion del Ejercicio 3</summary>\n",
     "<code>\n",
     "\n",
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "\n",
-    "velocidad(6)\n",
-    "color(\"white\")\n",
-    "\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(10)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(20)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(30)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(40)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(50)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(60)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(70)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(80)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(90)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
+    "ir_a_casa()<br>\n",
+    "borrar_todo()<br>\n",
+    "<br>\n",
+    "velocidad(6)<br>\n",
+    "color(\"white\")<br>\n",
+    "<br>\n",
+    "adelante(10)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(10)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(20)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(20)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(30)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(30)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(40)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(40)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(50)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(50)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(60)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(60)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(70)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(70)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(80)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(80)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(90)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(90)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
     "\n",
     "</code>\n",
     "</details>"
@@ -422,7 +420,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "TOjryCd5QdW7"
+   },
    "source": [
     "Asi como tenemos las instrucciones `adelante` y `derecha` tambien tenemos las instrucciones `atras` e `izquierda`.\n",
     "\n",
@@ -436,32 +436,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "vBCrkRrMQdW7"
+   },
    "outputs": [],
    "source": [
     "ir_a_casa()\n",
     "borrar_todo()\n",
     "\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)\n",
-    "derecha(90)\n",
-    "adelante(100)"
+    "atras(100)\n",
+    "izquierda(90)\n",
+    "atras(100)\n",
+    "izquierda(90)\n",
+    "atras(100)\n",
+    "izquierda(90)\n",
+    "atras(100)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "vXF9zPVvQdW7"
+   },
    "source": [
-    "Veamos como dibujar un zigzag utilizando la palabra izquierda"
+    "Veamos como dibujar un zigzag utilizando la palabra izquierda y utilicemos otra instruccion para que la tortuga vaya mas rapido.\n",
+    "\n",
+    "Utilizaremos la palabra `velocidad` para que la tortuga vaya a la velocidad que querramos y entre parentesis pondremos la velocidad que queremos y que solo puede ser un numero entre 1 y 13, donde 1 es la velocidad mas lenta y 13 la mas rapida. Por ejemplo: `velocidad(6)`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "s5Iw_cztQdW7"
+   },
    "outputs": [],
    "source": [
     "ir_a_casa()\n",
@@ -490,7 +498,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "oIkZYPWTQdW7"
+   },
    "source": [
     "### Ejercicio 4:\n",
     "\n",
@@ -500,23 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 5: \n",
-    "\n",
-    "Dibuja un cubo con sus lados de 100 metros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "8eFfm4giQdW7"
+   },
    "outputs": [],
    "source": [
     "# Escribe a continuacion tus instrucciones\n",
@@ -527,55 +523,39 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "pGTAWAB6T6pg"
+   },
    "source": [
     "<details>\n",
-    "<summary>Click aqui para ver la Solucion del Ejercicio 3</summary>\n",
-    "Esta es solo una de muchas soluciones posibles. \n",
-    "Cualquier solucion que dibuje un cubo esta bien.\n",
+    "<summary>Click aqui para ver la Solucion del Ejercicio 4</summary>\n",
     "<code>\n",
     "\n",
-    "ir_a_casa()\n",
-    "    \n",
-    "borrar_todo()\n",
-    "\n",
-    "adelante(100)\n",
-    "    \n",
-    "derecha(90)\n",
-    "    \n",
-    "adelante(100)\n",
-    "    \n",
-    "derecha(90)\n",
-    "    \n",
-    "adelante(100)\n",
-    "    \n",
-    "derecha(90)\n",
-    "    \n",
-    "adelante(100)\n",
-    "    \n",
-    "derecha(45)\n",
-    "    \n",
-    "adelante(50)\n",
-    "    \n",
-    "derecha(45)\n",
-    "    \n",
-    "adelante(100)\n",
-    "    \n",
-    "derecha(90)\n",
-    "    \n",
-    "adelante(100)\n",
-    "    \n",
-    "derecha(45)\n",
-    "    \n",
-    "adelante(50)\n",
-    "    \n",
-    "derecha(135)\n",
-    "    \n",
-    "adelante(100)\n",
-    "    \n",
-    "derecha(45)\n",
-    "    \n",
-    "adelante(50)\n",
+    "ir_a_casa()<br>\n",
+    "borrar_todo()<br>\n",
+    "<br>\n",
+    "velocidad(6)<br>\n",
+    "color(\"white\")<br>\n",
+    "<br>\n",
+    "izquierda(90)<br>\n",
+    "<br>\n",
+    "adelante(30)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(30)<br>\n",
+    "izquierda(90)<br>\n",
+    "adelante(30)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(30)<br>\n",
+    "izquierda(90)<br>\n",
+    "adelante(30)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(30)<br>\n",
+    "izquierda(90)<br>\n",
+    "adelante(30)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(30)<br>\n",
+    "izquierda(90)<br>\n",
+    "adelante(30)<br>\n",
     "\n",
     "</code>\n",
     "</details>"
@@ -583,13 +563,82 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "bL_v855jQdW7"
+   },
+   "source": [
+    "### Ejercicio 5:\n",
+    "\n",
+    "Dibuja un cubo con sus lados de 100 metros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "iq4H7GIhQdW7"
+   },
+   "outputs": [],
+   "source": [
+    "# Escribe a continuacion tus instrucciones\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "fDF2kMigQdW7"
+   },
+   "source": [
+    "<details>\n",
+    "<summary>Click aqui para ver la Solucion del Ejercicio 5</summary>\n",
+    "Esta es solo una de muchas soluciones posibles.\n",
+    "Cualquier solucion que dibuje un cubo esta bien.\n",
+    "<code>\n",
+    "\n",
+    "ir_a_casa()<br>\n",
+    "borrar_todo()<br>\n",
+    "<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(45)<br>\n",
+    "adelante(50)<br>\n",
+    "derecha(45)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(90)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(45)<br>\n",
+    "adelante(50)<br>\n",
+    "derecha(135)<br>\n",
+    "adelante(100)<br>\n",
+    "derecha(45)<br>\n",
+    "adelante(50)<br>\n",
+    "\n",
+    "</code>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "_6hIdh9xQdW7"
+   },
    "source": [
     "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html)"
    ]
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
