--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -334,7 +334,9 @@
    "source": [
     "### Ejercicio 3:\n",
     "\n",
-    "Dibujar un espiral como el que se ve a continuacion. Ayuda empezar con lados de 10 centimetros e ir aumentando de 10 en 10 hasta llegar a lados de 100 centimetros."
+    "Dibujar un espiral como el que se ve a continuacion. Ayuda empezar con lados de 10 centimetros e ir aumentando de 10 en 10 hasta llegar a lados de 100 centimetros.\n",
+    "\n",
+    "![espiral](./img/espiral.png)"
    ]
   },
   {
