--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -52,21 +52,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83c26fd2-42d5-4e5f-8e88-93f94776886f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Envia tus dibujos a traves de esta"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "486a4c4a-cd6e-4d96-9395-85f3fae1c094",
    "metadata": {},
    "source": [
-    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html)"
+    "# [Envia tus dibujos a traves de este enlace](https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html)"
    ]
   }
  ],
