--- a/cursos/espanol/programacion_basico/2_patrones_repetidos.ipynb
+++ b/cursos/espanol/programacion_basico/2_patrones_repetidos.ipynb
@@ -167,26 +167,14 @@
     "izquierda(90)<br>\n",
     "<br>\n",
     "for x in range(10):<br>\n",
-    "    adelante(30)<br>\n",
-    "    derecha(90)<br>\n",
-    "    adelante(30)<br>\n",
-    "    izquierda(90)<br>\n",
+    "&nbsp;&nbsp;adelante(30)<br>\n",
+    "&nbsp;&nbsp;derecha(90)<br>\n",
+    "&nbsp;&nbsp;adelante(30)<br>\n",
+    "&nbsp;&nbsp;izquierda(90)<br>\n",
     "\n",
     "</code>\n",
     "</details>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
