--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -28,7 +28,7 @@
    "id": "322483a4-ca97-4283-b31b-69573877c7d3",
    "metadata": {},
    "source": [
-    "## El primero un ejemplo del Profe para que sirva de inspiracion:"
+    "## El primero un ejemplo del Profe para que sirva de inspiracion :)"
    ]
   },
   {
