--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -17,18 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# RECUERDA SIEMPRE DESPERTAR A LA TORTUGA\n",
+    "#@title Ejecutar para despertar a la tortuga {display-mode:\"form\"}\n",
     "!pip install SeTeEscapoLaTortuga -U -q\n",
     "from SeTeEscapoLaTortuga.Turtle import *\n",
     "despertar_tortuga()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "322483a4-ca97-4283-b31b-69573877c7d3",
-   "metadata": {},
-   "source": [
-    "## El primero un ejemplo del Profe para que sirva de inspiracion :)"
    ]
   },
   {
@@ -38,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#@title Dibujo enviado por Hernan {display-mode:\"form\"}\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
     "\n",
@@ -49,6 +42,42 @@
     "    color((x,x,x))\n",
     "    adelante(x)\n",
     "    izquierda(angulo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "def6c81b-4d13-4d53-8710-e26bf5476436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Flor {display-mode:\"form\"}\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "n, m = 11,8\n",
+    "x_central, y_central = 300, 250\n",
+    "\n",
+    "def radius(n,m,theta):\n",
+    "  return math.cos(theta * n/m)\n",
+    "\n",
+    "def polar_to_cartesian(r, theta):\n",
+    "  x = r * math.cos(theta)\n",
+    "  y = r * math.sin(theta)\n",
+    "  return x, y\n",
+    "\n",
+    "velocidad(13)\n",
+    "ancho_linea(2)\n",
+    "\n",
+    "radio_del_dibujo = 100\n",
+    "n_angulos = 501\n",
+    "for i in range(n_angulos):\n",
+    "    theta = 16 * math.pi * i / (n_angulos - 1)\n",
+    "    r = radius(n,m,theta)\n",
+    "    x, y = polar_to_cartesian(r, theta)\n",
+    "    ir_a_xy(x*radio_del_dibujo + x_central, y*radio_del_dibujo + y_central)"
    ]
   },
   {
