--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -26,6 +26,97 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2b48867-65d6-4914-985b-e7661c05fafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Teo {display-mode:\"form\"}\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "velocidad(13)\n",
+    "ancho_linea(2)\n",
+    "\n",
+    "adelante(100)\n",
+    "izquierda(90)\n",
+    "adelante(40)\n",
+    "izquierda(180)\n",
+    "adelante(80)\n",
+    "\n",
+    "no_dibujar()\n",
+    "adelante(30)\n",
+    "dibujar()\n",
+    "\n",
+    "adelante(80)\n",
+    "atras(80)\n",
+    "derecha(90)\n",
+    "adelante(50)\n",
+    "izquierda(90)\n",
+    "adelante(40)\n",
+    "atras(40)\n",
+    "derecha(90)\n",
+    "adelante(50)\n",
+    "izquierda(90)\n",
+    "adelante(80)\n",
+    "\n",
+    "no_dibujar()\n",
+    "adelante(30)\n",
+    "dibujar()\n",
+    "\n",
+    "adelante(80)\n",
+    "izquierda(90)\n",
+    "adelante(100)\n",
+    "izquierda(90)\n",
+    "adelante(80)\n",
+    "izquierda(90)\n",
+    "adelante(100)\n",
+    "\n",
+    "no_dibujar()\n",
+    "izquierda(90)\n",
+    "adelante(40)\n",
+    "izquierda(90)\n",
+    "adelante(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "def6c81b-4d13-4d53-8710-e26bf5476436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Flor {display-mode:\"form\"}\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "n, m = 3,2\n",
+    "x_central, y_central = 300, 250\n",
+    "\n",
+    "def radius(n,m,theta):\n",
+    "    return math.cos(theta * n/m)\n",
+    "\n",
+    "def polar_to_cartesian(r, theta):\n",
+    "    x = r * math.cos(theta)\n",
+    "    y = r * math.sin(theta)\n",
+    "    return x, y\n",
+    "\n",
+    "velocidad(13)\n",
+    "ancho_linea(4)\n",
+    "\n",
+    "radio_del_dibujo = 100\n",
+    "n_angulos = 201\n",
+    "for i in range(n_angulos):\n",
+    "    theta = 4 * math.pi * i / (n_angulos - 1)\n",
+    "    r = radius(n,m,theta)\n",
+    "    x, y = polar_to_cartesian(r, theta)\n",
+    "    ir_a_xy(x*radio_del_dibujo + x_central, y*radio_del_dibujo + y_central)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4130143c-0cad-4026-b6a1-c397a8df99bd",
    "metadata": {},
    "outputs": [],
@@ -42,42 +133,6 @@
     "    color((x,x,x))\n",
     "    adelante(x)\n",
     "    izquierda(angulo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "def6c81b-4d13-4d53-8710-e26bf5476436",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Dibujo enviado por Flor {display-mode:\"form\"}\n",
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "\n",
-    "import math\n",
-    "\n",
-    "n, m = 11,8\n",
-    "x_central, y_central = 300, 250\n",
-    "\n",
-    "def radius(n,m,theta):\n",
-    "  return math.cos(theta * n/m)\n",
-    "\n",
-    "def polar_to_cartesian(r, theta):\n",
-    "  x = r * math.cos(theta)\n",
-    "  y = r * math.sin(theta)\n",
-    "  return x, y\n",
-    "\n",
-    "velocidad(13)\n",
-    "ancho_linea(2)\n",
-    "\n",
-    "radio_del_dibujo = 100\n",
-    "n_angulos = 501\n",
-    "for i in range(n_angulos):\n",
-    "    theta = 16 * math.pi * i / (n_angulos - 1)\n",
-    "    r = radius(n,m,theta)\n",
-    "    x, y = polar_to_cartesian(r, theta)\n",
-    "    ir_a_xy(x*radio_del_dibujo + x_central, y*radio_del_dibujo + y_central)"
    ]
   },
   {
